add user dashboard db integration

--- a/ciet_pmu/admin_dashboard/templates/admin_dashboard/admin_dashboard.html
+++ b/ciet_pmu/admin_dashboard/templates/admin_dashboard/admin_dashboard.html
@@ -7,7 +7,7 @@
 {% block content %}
 <script src="{% static 'js/chart.js' %}"></script>
 
-<div class="flex min-h-[70vh] h-screen bg-gray-100">
+<div class="flex min-h-screen bg-gray-100">
   {% include "partials/admin_sidebar.html" %}
 
   <div class="flex-1 flex flex-col relative p-6 md:p-10">
@@ -24,7 +24,19 @@
       {% endif %}
     </div>
 
-    <div class="bg-white p-6 rounded-2xl shadow-md fade-in">
+    {% comment %} <div class="bg-white mb-16 p-6 rounded-2xl shadow-md fade-in">
+  <h2 class="text-xl font-semibold mb-4 text-gray-800">Programs Updated per Month</h2>
+  <canvas
+  id="monthlyChart"
+  data-labels="[{% for label in month_labels %}'{{ label }}'{% if not forloop.last %}, {% endif %}{% endfor %}]"
+  data-values="[{% for value in month_counts %}{{ value }}{% if not forloop.last %}, {% endif %}{% endfor %}]"
+  class="w-full max-w-4xl h-96 mx-auto">
+</canvas> {% endcomment %}
+{% comment %} </div> {% endcomment %}
+
+<div class="h-12"></div>
+
+    <div class="bg-white p-6 mt-16 rounded-2xl shadow-md fade-in">
       <h2 class="text-xl font-semibold mb-4 text-gray-800">Budget Overview</h2>
       <canvas
         id="myChart"
