--- a/ciet_pmu/admin_dashboard/templates/admin_dashboard/project_pdf.html
+++ b/ciet_pmu/admin_dashboard/templates/admin_dashboard/project_pdf.html
@@ -4,7 +4,7 @@
 </head>
 <body>
   <h2>Filtered Project Report</h2>
-  <table class="table_pdf">
+  <table class="table_pdf border border-black">
     <thead>
       <tr>
         <th class="th_pdf">Title</th>
