--- a/ciet_pmu/user_dashboard/templates/user_dashboard/edit_program.html
+++ b/ciet_pmu/user_dashboard/templates/user_dashboard/edit_program.html
@@ -9,6 +9,16 @@
   <div
     class="w-full bg-gray-200 rounded-full h-6 mb-10 shadow-inner border border-gray-300"
   >
+  {% if messages %}
+<div class="mb-4">
+  {% for message in messages %}
+    <div class="p-3 rounded 
+        {% if message.tags == 'error' %} bg-red-100 text-red-800 border border-red-300 {% else %} bg-green-100 text-green-800 border border-green-300 {% endif %}">
+      {{ message }}
+    </div>
+  {% endfor %}
+</div>
+{% endif %}
     <div
       id="progress-bar"
       class="bg-gradient-to-r from-indigo-500 to-indigo-700 h-6 rounded-full text-right transition-all duration-300 ease-in-out overflow-hidden"
