--- a/ciet_pmu/user_dashboard/templates/user_dashboard/user_dashboard.html
+++ b/ciet_pmu/user_dashboard/templates/user_dashboard/user_dashboard.html
@@ -25,7 +25,7 @@
         </p>
 
         <!-- Action Buttons -->
-        <div class="flex gap-4 mt-3">
+        <div class="flex justify-between gap-4 mt-3">
           <a href="{% url 'edit_program' program.id %}">
             <button
               class="px-4 py-2 bg-blue-500 text-white rounded hover:bg-blue-600"
@@ -39,6 +39,13 @@
           >
             View Program
           </button>
+          <a href="{% url 'prepare_report' program.id %}">
+            <button
+              class="px-4 py-2 bg-blue-500 text-white rounded hover:bg-blue-600"
+            >
+              Prepare Report
+            </button>
+          </a>
         </div>
 
         <!-- Collapsible Summary -->
