--- a/ciet_pmu/admin_dashboard/templates/admin_dashboard/view_projects.html
+++ b/ciet_pmu/admin_dashboard/templates/admin_dashboard/view_projects.html
@@ -74,6 +74,7 @@
             <th class="px-4 py-3 text-left">Project Sub-type</th>
             <th class="px-4 py-3 text-left">Update Program</th>
             <th class="px-4 py-3 text-left">Delete Program</th>
+            <th class="px-4 py-3 text-left">Download Project Report</th>
           </tr>
         </thead>
         <tbody class="text-sm">
@@ -92,6 +93,10 @@
               <a href="{% url 'delete_project' project.id %}" 
               class="text-red-600 hover:underline hover:text-red-800 text-sm"
               onclick="return confirm('Are you sure you want to delete this project?');">Delete</a>
+            </td>
+            <td class="px-4 py-2 text-center">
+              <a href="{% url 'export_projects_pdf' project.id %}" 
+              class="text-green-600 hover:underline hover:text-green-800 text-sm">Download</a>
             </td>
           </tr>
           {% endfor %}
