--- a/ciet_pmu/templates/layout.html
+++ b/ciet_pmu/templates/layout.html
@@ -9,6 +9,7 @@
     <title>{% block title %}{% endblock %}</title>
     <link rel="stylesheet" href="{% static "css/style.css" %}">
     <link rel="stylesheet" href="{% static "css/main.css" %}">
+    <link rel="stylesheet" href="{% static "css/user.css" %}">
     {% tailwind_css %}
 </head>
 <body class="bg-gray-100 font-sans text-gray-900 antialiased"> 
